Sun Jul 27 23:14:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvButton.h:
	* src/QGaimConvWindow.cpp:
	* src/main.cpp:
	  - Clicking the conversations button (as opposed to holding it down)
	    now raises the last active conversation window.

Sun Jul 27 17:13:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Removed the delay on the pop-up menu.

Sun Jul 27 17:09:38 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Moved the warn, block, add/remove, and get info buttons into
	    the User menu.

Sun Jul 27 16:41:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The text view now scrolls to the bottom when a new IM comes in
	    or is sent.

Sun Jul 27 16:26:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The text entry field clears after sending an IM now. Or at
	    least it should. I didn't test it, but hey, I'm perfect, right?

Sun Jul 27 16:24:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Sending messages over IMs and chats now actually works.

Sun Jul 27 03:32:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - QTabWidget's currentPageIndex() doesn't actually return the
	    index as the name suggests. It returns a unique ID. Worked
	    around this to return the page's actual current index.

Sun Jul 27 03:01:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/main.cpp:
	  - The gaim core is now initialized through the new gaim_core API.

Sun Jul 27 02:24:45 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - The QGaimConvButton class registering and unregistering the
	    conversation signal handlers now passes itself as the module