@@ -1,3 +1,12 @@
+Mon Jul 28 00:13:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimAccountEditor.cpp:
+	* src/QGaimAccountEditor.h:
+	* src/QGaimAccountsWindow.cpp:
+	* src/QGaimAccountsWindow.h:
+	* gaim.pro:
+	  - Added the very beginnings of the Add/Edit account dialog.
+
 Sun Jul 27 23:14:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaim.h:
